--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "junit-viewer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.12.4",
-    "xml2js": "^0.4.8"
-  }
+    "name": "junit-viewer",
+    "version": "1.0.0",
+    "description": "Run this by passing in a folder and it will start server to view simple junit results",
+    "main": "index.js",
+    "author": "Luke Preston",
+    "license": "ISC",
+    "repository": "https://github.com/lukejpreston/junit_viewer.git",
+    "dependencies": {
+        "express": "^4.12.4",
+        "xml2js": "^0.4.8"
+    }
 }
