--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "repository": "https://github.com/lukejpreston/junit_viewer.git",
   "dependencies": {
+    "date-format": "0.0.2",
     "express": "^4.12.4",
     "xml2js": "^0.4.8"
   }
