adding parser tests and coverage tool

--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "devDependencies": {
     "jest-cli": "^0.8.0"
+  },
+  "jest" : {
+    "collectCoverage": true,
+    "coverageReporters": ["lcov"]
   }
 }
