--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "junit-viewer",
-  "version": "3.3.2",
-  "description": "Run this by passing in a folder and it will start server to view simple junit results",
-  "main": "index.js",
-  "bin": {
-    "junit-viewer": "./bin/junit-viewer"
-  },
-  "scripts": {
-    "test": "jest"
-  },
-  "directories": "./",
-  "author": "Luke Preston",
-  "license": "ISC",
-  "repository": "https://github.com/lukejpreston/junit_viewer.git",
-  "dependencies": {
-    "date-format": "0.0.2",
-    "express": "^4.12.4",
-    "mustache": "^2.2.0",
-    "xml2js": "^0.4.8"
-  },
-  "devDependencies": {
-    "jest-cli": "^0.8.0"
-  },
-  "jest" : {
-    "collectCoverage": true,
-    "coverageReporters": ["lcov"]
-  }
+    "name": "junit-viewer",
+    "version": "3.3.2",
+    "description": "Run this by passing in a folder and it will start server to view simple junit results",
+    "main": "index.js",
+    "bin": {
+        "junit-viewer": "./bin/junit-viewer"
+    },
+    "scripts": {
+        "test": "jest"
+    },
+    "directories": "./",
+    "author": "Luke Preston",
+    "license": "ISC",
+    "repository": "https://github.com/lukejpreston/junit_viewer.git",
+    "dependencies": {
+        "date-format": "0.0.2",
+        "express": "^4.12.4",
+        "mustache": "^2.2.0",
+        "xml2js": "^0.4.8"
+    },
+    "devDependencies": {
+        "jest-cli": "^0.8.0",
+        "jsdom": "7.0.2"
+    },
+    "jest": {
+        "collectCoverage": true,
+        "coverageReporters": ["lcov"]
+    }
 }
