--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-    "name": "junit-viewer",
-    "version": "3.3.2",
-    "description": "Run this by passing in a folder and it will start server to view simple junit results",
-    "main": "index.js",
-    "bin": {
-        "junit-viewer": "./bin/junit-viewer"
-    },
-    "scripts": {
-        "test": "jest"
-    },
-    "directories": "./",
-    "author": "Luke Preston",
-    "license": "ISC",
-    "repository": "https://github.com/lukejpreston/junit_viewer.git",
-    "dependencies": {
-        "express": "^4.12.4",
-        "mustache": "^2.2.0",
-        "xml2js": "^0.4.8"
-    },
-    "devDependencies": {
-        "jest-cli": "^0.8.0"
-    },
-    "jest": {
-        "collectCoverage": true,
-        "coverageReporters": ["lcov"]
-    }
+  "name": "junit-viewer",
+  "version": "3.4.0",
+  "description": "Run this by passing in a folder and it will start server to view simple junit results",
+  "main": "index.js",
+  "bin": {
+    "junit-viewer": "./bin/junit-viewer"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "directories": "./",
+  "author": "Luke Preston",
+  "license": "ISC",
+  "repository": "https://github.com/lukejpreston/junit_viewer.git",
+  "dependencies": {
+    "express": "^4.12.4",
+    "mustache": "^2.2.0",
+    "xml2js": "^0.4.8"
+  },
+  "devDependencies": {
+    "jest-cli": "^0.8.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov"
+    ]
+  }
 }
