--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
-  "name": "junit-viewer",
-  "version": "4.1.1",
-  "description": "Run this by passing in a folder and it will start server to view simple junit results",
-  "main": "index.js",
-  "bin": {
-    "junit-viewer": "./bin/junit-viewer"
-  },
-  "scripts": {
-    "test": "jest"
-  },
-  "directories": "./",
-  "author": "Luke Preston",
-  "license": "ISC",
-  "repository": "https://github.com/lukejpreston/junit_viewer.git",
-  "dependencies": {
-    "express": "^4.12.4",
-    "mustache": "^2.2.0",
-    "xml2js": "^0.4.8"
-  },
-  "devDependencies": {
-    "jest-cli": "^0.8.0"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "coverageReporters": [
-      "lcov"
-    ]
-  }
+    "name": "junit-viewer",
+    "version": "4.1.1",
+    "description": "A simple and quick tool to view junit results",
+    "main": "src/main.js",
+    "bin": {
+        "junit-viewer": "./bin/junit-viewer"
+    },
+    "directories": {
+        "bin": "./bin",
+        "templates": "./templates",
+        "src": "./src"
+    },
+    "keywords": [
+        "junit",
+        "xunit",
+        "test"
+    ],
+    "scripts": {
+        "test": "jest"
+    },
+    "author": "Luke Preston <lukejpreston@gmail.com>",
+    "license": "ISC",
+    "repository": {
+        "url": "https://github.com/lukejpreston/junit_viewer.git",
+        "type": "git"
+    },
+    "bugs": {
+        "url": "https://github.com/lukejpreston/junit_viewer.git"
+    },
+
+    "homepage": "https://github.com/lukejpreston/junit_viewer.git",
+    "dependencies": {
+        "express": "^4.12.4",
+        "mustache": "^2.2.0",
+        "xml2js": "^0.4.8"
+    },
+    "devDependencies": {
+        "jest-cli": "^0.8.0"
+    },
+    "jest": {
+        "collectCoverage": true,
+        "coverageReporters": [
+            "lcov"
+        ]
+    }
 }
