--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest && ./bin/junit-viewer --results=junit_viewer_specs --save=junit_viewer_specs.html"
   },
   "author": "Luke Preston <lukejpreston@gmail.com>",
   "license": "ISC",
