--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/lukejpreston/junit_viewer.git",
   "dependencies": {
     "express": "^4.12.4",
+    "html-minify": "^0.3.1",
     "mustache": "^2.2.0",
     "xml2js": "^0.4.8"
   },
