--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - "5.4"
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/d7f6701cbdfe5ce20fbb
+    on_success: change
+    on_failure: always
+    on_start: never
+
