--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/d7f6701cbdfe5ce20fbb
-    on_success: change
+    on_success: always
     on_failure: always
     on_start: never
 
