--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-.DS_Store
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# dependencies
 node_modules
-npm-debug.log
 
+# testing
 coverage
-junit_viewer_specs
 
-junit_viewer.sublime-workspace
+# production
+build
+
+# misc
+.DS_Store
+.env
+npm-debug.log
