some more thoughts on things

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xunit-viewer",
-  "version": "0.1.0",
+  "version": "5.0.0",
   "devDependencies": {
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
@@ -17,11 +17,16 @@
     "dotenv": "2.0.0",
     "eslint": "3.8.1",
     "eslint-config-react-app": "^0.5.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-react": "^4.2.0",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
     "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
@@ -50,9 +55,7 @@
     "react-dom": "^15.4.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+
   },
   "jest": {
     "collectCoverageFrom": [
