--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
-  "name": "xunit-viewer",
   "version": "5.0.0",
+  "license": "ISC",
+  "repository": {
+    "url": "https://github.com/lukejpreston/xunit-viewer.git",
+    "type": "git"
+  },
+  "bugs": {
+    "url": "https://github.com/lukejpreston/xunit-viewer.git"
+  },
+  "homepage": "http://lukejpreston.github.io/xunit-viewer",
+  "author": "Luke Preston <lukejpreston@gmail.com>",
+  "name": "xunit-viewer",
+  "bin": "./bin/xunit-viewer",
+  "main": "./index.js",
+  "directories": {
+    "bin": "./bin",
+    "src": "./src"
+  },
+  "files": {
+    "index.js": "./index.js",
+    "main.js": "./main.js",
+    "main.css": "./main.css"
+  },
   "devDependencies": {
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
@@ -55,7 +76,7 @@
     "react-dom": "^15.4.2"
   },
   "scripts": {
-
+    "start": "./bin/xunit-viewer --results=./src/test-data --port=3000 --minify=false"
   },
   "jest": {
     "collectCoverageFrom": [
