--- a/package.json
+++ b/package.json
@@ -72,6 +72,11 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "bulma": "^0.3.1",
+    "font-awesome": "^4.7.0",
+    "normalize.css": "^5.0.0",
+    "postcss": "^5.2.13",
+    "postcss-cssnext": "^2.9.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
