--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "postcss": "^5.2.13",
     "postcss-cssnext": "^2.9.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "./bin/xunit-viewer --results=./src/test-data --port=3000 --minify=false"
